--- a/Labs/Lab 3/Lab 3/Base.lproj/Main.storyboard
+++ b/Labs/Lab 3/Lab 3/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_5" orientation="portrait">
+    <device id="retina6_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,14 +15,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Lab_3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="8HN-YY-Eqg">
-                                <rect key="frame" x="85" y="51" width="244" height="442"/>
+                                <rect key="frame" x="223.33333333333334" y="7" width="449.33333333333326" height="400"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="Z7T-QG-1jM">
-                                        <rect key="frame" x="0.0" y="0.0" width="244" height="281"/>
+                                        <rect key="frame" x="0.0" y="65.333333333333343" width="244" height="269.33333333333326"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1dmain" translatesAutoresizingMaskIntoConstraints="NO" id="Zkb-uq-6i7">
                                                 <rect key="frame" x="0.0" y="0.0" width="244" height="242"/>
@@ -48,7 +48,7 @@
                                                 </variation>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One Direction" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NlY-hP-9uv">
-                                                <rect key="frame" x="67.333333333333343" y="249" width="109.33333333333334" height="32"/>
+                                                <rect key="frame" x="67.333333333333343" y="249.00000000000003" width="109.33333333333334" height="20.333333333333343"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="32" id="qcG-ra-Ee8"/>
                                                 </constraints>
@@ -69,7 +69,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="ZGc-8l-Dcf">
-                                        <rect key="frame" x="23.333333333333329" y="289" width="197.33333333333337" height="153"/>
+                                        <rect key="frame" x="251.99999999999994" y="123.66666666666666" width="197.33333333333331" height="152.99999999999997"/>
                                         <subviews>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="VS4-fb-qTl">
                                                 <rect key="frame" x="0.0" y="0.0" width="197.33333333333334" height="29"/>
@@ -91,7 +91,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="1js-dW-Ohk">
-                                                        <rect key="frame" x="148.33333333333337" y="0.0" width="51" height="31"/>
+                                                        <rect key="frame" x="148.33333333333331" y="0.0" width="51" height="31"/>
                                                         <connections>
                                                             <action selector="updateType:" destination="BYZ-38-t0r" eventType="valueChanged" id="ddO-FU-1iK"/>
                                                         </connections>
@@ -108,7 +108,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tk9-rn-3uT">
-                                                        <rect key="frame" x="148.33333333333337" y="0.0" width="51" height="31"/>
+                                                        <rect key="frame" x="148.33333333333331" y="0.0" width="51" height="31"/>
                                                         <connections>
                                                             <action selector="changeColor:" destination="BYZ-38-t0r" eventType="valueChanged" id="uJX-ju-TXh"/>
                                                         </connections>
@@ -125,7 +125,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="16" minValue="6" maxValue="22" translatesAutoresizingMaskIntoConstraints="NO" id="HJ1-dI-ZWe">
-                                                        <rect key="frame" x="51.333333333333329" y="0.0" width="148" height="31"/>
+                                                        <rect key="frame" x="51.333333333333314" y="0.0" width="148" height="31"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="144" id="WVM-8Z-yyn"/>
                                                         </constraints>
